# link_prediction_for_constraint_acquisition

./: README.md  pyproject.toml
notebooks/: main.ipynb
src/: __main__.py  utils.py
src/acquisition/baselines/: pquacq.py  quacq.py
src/acquisition/ml_quacq/: ml_quacq_e.py  ml_quacq_n.py
src/benchmarks/: jigsaw.py  random_bench.py  rflap.py  zebra.py
src/core/: base.py  constraints.py  solve.py
tests/test_benchmarks/: test_benchmark_validation.py
tests/test_core/: test_base.py
tests/test_ml_quacq/edge/: test_mlquacq_edge_acquisition.py  test_mlquacq_edge_convergence.py  test_mlquacq_edge_reproducebility.py
tests/test_ml_quacq/node/: test_mlquacq_node_acquisition.py  test_mlquacq_node_convergence.py  test_mlquacq_node_reproducebility.py
tests/test_pquacq/: test_pquacq_acquisition.py  test_pquacq_convergence.py  test_pquacq_reproducebility.py
tests/test_quacq/: test_quacq_acquisition.py  test_quacq_convergence.py  test_quacq_reproducebility.py
