[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ml_quacq"
version = "0.1.0"
description = "use machine learning to train a link prediction model to identify and suggest missing links for constraints learning"
authors = [
    { name = "Hamza ISLAH", email = "islah.hamza1997@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }

dependencies = [
    "black>=23.0",
    "networkx>=2.8",
    "ortools>=9.6",
    "pytest>=7.0",
    "torch>=2.0",
    "torch_geometric>=2.0",
    "tqdm>=4.0",
    "scikit-learn",
    "ipykernel",
    "infomap",
    "matplotlib",
    "imblearn",
]


[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]


[tool.pytest.ini_options]                                                                                                                                              
testpaths = ["tests"]